# ai-dev-onboarding-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  secrets-example.toml
.streamlit/: config.toml
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
src/: chat.py  constants.py  index.py  llamaIndexService.py  streamLitService.py
src/config/: vars.py
src/data/: testData.txt
src/services/llamaIndexService/: llamaIndexService.py  llama_index_service.py
src/services/streamLitService/: streamLitService.py  stream_lit_service.py
