[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BananaBot"
version = "0.1.0"
description = "BananaBot - rampup tool for teams"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "watchdog", 
    "openai",
    "llama-index",
    "llama-index-llms-openai"
]

[project.scripts]
start = "src.index:main"

[tool.setuptools]
packages = ["src"] 