[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AiDevOnboardingAssistant"
version = "0.1.0"
description = "AiDevOnboardingAssistant - AI Developer Onboarding Assistant"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "watchdog",
    "openai",
    "llama-index",
    "pgvector",
    "llama-index-llms-openai",
    "llama-index-vector-stores-postgres",
    "python-dotenv"
]

[project.scripts]
start = "src.index:main"

[tool.setuptools]
packages = ["src", "src.config", "src.images", "src.services", "src.services.llamaIndexService", "src.services.streamLitService"]
